# maxwellbloch

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE.txt  Makefile  README.md  TASKS.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  python-package-conda.yml
docs/: conf.py  docs-environment.yml  index.rst  install.md
docs/_static/: custom.css
docs/api/: field.rst  hyperfine.rst  index.rst  mb_solve.rst  ob_atom.rst  ob_solve.rst  spectral.rst  t_funcs.rst  utility.rst
docs/blogpost-simultons/: Makefile
docs/examples/: gallery.rst  mb-solve-vee-sech-0.5pi-1.5pi.qu  mbs-Rb87_5s12_5p12_F11_q1-sech-2pi.ipynb  mbs-Rb87_5s12_5p12_F11_q1-weak-pulse-decay.ipynb  mbs-Rb87_5s12_5p32_F23_q1-weak-pulse-decay.ipynb  mbs-ladder-at-Oc0.0.qu  mbs-ladder-at-Oc1.0.qu  mbs-ladder-at-Oc2.0.qu  mbs-ladder-at-Oc5.0.qu  mbs-ladder-autler-townes.ipynb  mbs-ladder-rydberg-eit-co-prop.qu  mbs-ladder-rydberg-eit-counter-prop.qu  mbs-ladder-rydberg-eit-counter.ipynb  mbs-ladder-rydberg-eit-no-coupling.qu  mbs-ladder-weak-pulse-coupling-decay.ipynb  mbs-ladder-weak-pulse-coupling-decay.qu  mbs-lambda-adiabatons-counter.qu  mbs-lambda-adiabatons-intuitive.qu  mbs-lambda-adiabatons.ipynb  mbs-lambda-cpt-coupling.qu  mbs-lambda-cpt-no-coupling.qu  mbs-lambda-cpt.ipynb  mbs-lambda-eit-slow-light.ipynb  mbs-lambda-weak-pulse-cloud-atoms-some-coupling-store.qu  mbs-lambda-weak-pulse-cloud-atoms-some-coupling.qu  mbs-lambda-weak-pulse-cloud-atoms-with-coupling-store.ipynb  mbs-lambda-weak-pulse-cloud-atoms-with-coupling.ipynb  mbs-lambda-weak-pulse-more-atoms-no-coupling.ipynb  mbs-lambda-weak-pulse-more-atoms-no-coupling.qu  mbs-lambda-weak-pulse-more-atoms-with-coupling.ipynb  mbs-linear-absorption-cw.qu  mbs-linear-absorption-ng01-decay.qu  mbs-linear-absorption-ng1-decay.qu  mbs-linear-absorption-ng10-decay.qu  mbs-linear-absorption.ipynb  mbs-two-gaussian-0.8pi.ipynb  mbs-two-gaussian-0.8pi.qu  mbs-two-gaussian-1.8pi.ipynb  mbs-two-gaussian-1.8pi.qu  mbs-two-photon-echo-tau0.5.qu  (+54 more)
docs/support/: troubleshooting.md
docs/usage/: built-in-time-functions.ipynb  counter-propagating-eit.qu  counter-propagating.ipynb  plotting-two-level.qu  plotting.ipynb  scripts.md  spectral-analysis.ipynb  spectral-analysis.qu  structure-1.qu  structure.ipynb  three-level.ipynb  time-functions.ipynb  two-level.ipynb  velocity-classes.ipynb  velocity-classes.qu
maxwellbloch/: __init__.py  angmom.py  field.py  fileio.py  fixed.py  hyperfine.py  macro.py  mb_solve.py  ob_atom.py  ob_base.py  ob_solve.py  sigma.py  spectral.py  t_funcs.py  testing.py  utility.py
maxwellbloch/tests/: test_angmom.py  test_field.py  test_fileio.py  test_fixed.py  test_hyperfine.py  test_macro.py  test_mb_solve.py  test_ob_atom.py  test_ob_solve.py  test_sigma.py  test_spectral.py  test_t_funcs.py  test_utility.py
plans/: MASTER_PLAN.md
src/maxwellbloch/: __init__.py  exceptions.py  field.py  fileio.py  hyperfine.py  mb_solve.py  ob_atom.py  ob_base.py  ob_solve.py  sigma.py  spectral.py  utility.py
tests/: bench_max.py  bench_mb_solve.py  test_angmom.py  test_counter_propagating.py  test_field.py  test_hyperfine.py  test_mb_solve.py  test_ob_atom.py  test_ob_base.py  test_ob_solve.py  test_plot.py  test_sigma.py  test_spectral.py  test_t_funcs.py  test_utility.py
tests/json/: field-square-1.json  mb_solve_no_rabi_freq_t_func.json  mbs-two-spectral.json  mbs_lambda_eit_no_coupling.json  mbs_lambda_eit_with_coupling.json  mbs_two_gaussian_2pi.json  mbs_two_gaussian_2pi_n_pi.json  mbs_two_sech_2pi.json  ob_atom_02.json  ob_solve_03.json  obs-two-two-fields.json  velocity-classes.json
(+33 files in other folders)
